docs/api/qiskit/0.29/qiskit.circuit.library.Permutation.mdx
---
title: Permutation
description: API reference for qiskit.circuit.library.Permutation
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.Permutation
---

# Permutation

<Class id="qiskit.circuit.library.Permutation" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/generalized_gates/permutation.py" signature="Permutation(num_qubits, pattern=None, seed=None)">
  Bases: `qiskit.circuit.quantumcircuit.QuantumCircuit`

  An n\_qubit circuit that permutes qubits.

  Return an n\_qubit permutation circuit implemented using SWAPs.

  **Parameters**

  *   **num\_qubits** (`int`) – circuit width.
  *   **pattern** (`Optional`\[`List`\[`int`]]) – permutation pattern. If None, permute randomly.
  *   **seed** (`Optional`\[`int`]) – random seed in case a random permutation is requested.

  **Raises**

  **CircuitError** – if permutation pattern is malformed.

  **Reference Circuit:**

  ![../\_images/qiskit.circuit.library.Permutation\_0\_0.png](/images/api/qiskit/0.29/qiskit.circuit.library.Permutation_0_0.png)

  **Expanded Circuit:**

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.Permutation.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.Permutation.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.Permutation.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.Permutation.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the tuples for the circuit’s data.

    Each tuple is in the format `(instruction, qargs, cargs)`, where instruction is an Instruction (or subclass) object, qargs is a list of Qubit objects, and cargs is a list of Clbit objects.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.Permutation.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.Permutation.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.Permutation.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.Permutation.instances" name="instances" attributeValue="= 16" />

  ### metadata

  <Attribute id="qiskit.circuit.library.Permutation.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.Permutation.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.Permutation.num_clbits" name="num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.Permutation.num_parameters" name="num_parameters">
    Convenience function to get the number of parameter objects in the circuit.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.Permutation.num_qubits" name="num_qubits">
    Return number of qubits.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.Permutation.parameters" name="parameters">
    Convenience function to get the parameters defined in the parameter table.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.Permutation.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.circuit.library.Permutation.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>
</Class>

